--- a/style.css
+++ b/style.css
@@ -1,1 +1,30 @@
 
+
+
+.events-img img {
+    width: 50%;
+    height: 200px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border: 3px solid green;
+
+}
+
+.events-text {
+    margin: auto;
+    width: 50%;
+    border: 3px solid green;
+    padding: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.p2 {
+
+}
+
+.p3 {
+
+}
