--- a/style.css
+++ b/style.css
@@ -11,20 +11,32 @@
 
 }
 
-.events-text {
-    margin: auto;
-    width: 50%;
+
+.parent {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
     border: 3px solid green;
-    padding: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-}
+    width: 50%;
+    margin: auto;
+    text-align: center;
+    align-items: center;    
+    }
+    
+    .div1 { grid-area: 1 / 1 / 3 / 2; }
+    .div2 { grid-area: 1 / 2 / 2 / 3; }
+    .div3 { grid-area: 1 / 3 / 2 / 4; }
+    .div4 { grid-area: 2 / 2 / 3 / 3; }
+    .div5 { grid-area: 2 / 3 / 3 / 4; }
+
+
 
 .p2 {
 
 }
 
 .p3 {
-
+    font-size: x-small;
 }
