--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 
 
 .events-img img {
-    width: 50%;
-    height: 200px;
+    width: 80%;
+    height: max-content 100px;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -12,31 +12,54 @@
 }
 
 
+
+
+
 .parent {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     border: 3px solid green;
-    width: 50%;
+    width: 80%;
     margin: auto;
-    text-align: center;
+    text-align: left;
     align-items: center;    
-    }
-    
-    .div1 { grid-area: 1 / 1 / 3 / 2; }
-    .div2 { grid-area: 1 / 2 / 2 / 3; }
-    .div3 { grid-area: 1 / 3 / 2 / 4; }
-    .div4 { grid-area: 2 / 2 / 3 / 3; }
-    .div5 { grid-area: 2 / 3 / 3 / 4; }
+}
+        
+    .div1 { grid-area: 1 / 1 / 2 / 3; }
+    .div2 { grid-area: 2 / 1 / 3 / 2; }
+    .div3 { grid-area: 2 / 2 / 3 / 3; }
+    .div4 { grid-area: 3 / 1 / 4 / 3; }
 
 
 
 .p2 {
-
+    font-size: large;
 }
 
 .p3 {
-    font-size: x-small;
+    font-size: medium;
+}
+
+
+
+.flex-container {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: flex-start;
+    width: 80%;
+    border: solid green;
+    height: 80vh;
+    overflow: auto;
+    flex-direction: row;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.flex-container div {
+    background-color: lightblue;
 }
