--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
 
+/*----------Header Section----------*/
 
+.logo-img{
+
+}
+
+.profil{
+    
+}
 
 .events-img img {
     width: 80%;
@@ -11,10 +19,7 @@
 
 }
 
-
-
-
-
+/**/
 .parent {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -33,8 +38,6 @@
     .div3 { grid-area: 2 / 2 / 3 / 3; }
     .div4 { grid-area: 3 / 1 / 4 / 3; }
 
-
-
 .p2 {
     font-size: large;
 }
@@ -42,7 +45,6 @@
 .p3 {
     font-size: medium;
 }
-
 
 
 .flex-container {
