search box hover

--- a/style.css
+++ b/style.css
@@ -25,6 +25,20 @@
 
 }
 
+    /*Search-box*/
+.search-box{
+    position: relative;
+    width: 60px;
+    height: 60px;
+    background: #fff;
+    border-radius: 60px;
+    transition: 0.5s;
+}
+
+.search-box .search-icon:hover{
+    color: #1399FC;
+}
+
 /**/
 .parent {
     display: grid;
