--- a/style.css
+++ b/style.css
@@ -16,13 +16,14 @@
 }
 
 .events-img img {
-    width: 80%;
-    height: max-content 100px;
+    width: 350px;
+    height: 200px;
+    object-fit: cover;
     display: block;
     margin-left: auto;
     margin-right: auto;
     border: 3px solid green;
-
+    
 }
 
     /*Search-box*/
@@ -47,7 +48,7 @@
     grid-column-gap: 0px;
     grid-row-gap: 0px;
     border: 3px solid green;
-    width: 80%;
+    width: 350px;
     margin: auto;
     text-align: left;
     align-items: center;    
@@ -67,21 +68,24 @@
 }
 
 
-.flex-container {
+.event-section {
     display: flex;
     flex-wrap: nowrap;
-    justify-content: flex-start;
-    align-items: flex-start;
-    align-content: flex-start;
+    justify-content: center;
+    align-items: center;
     width: 80%;
     border: solid green;
-    height: 80vh;
+    height: auto;
     overflow: auto;
-    flex-direction: row;
+    flex-direction: column;
     margin-left: auto;
-    margin-right: auto;
+    margin-right: auto;        
 }
 
-.flex-container div {
+.events {
+    margin: 10px;
+}
+
+.event-section div {
     background-color: lightblue;
 }
