--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 /*----------Header Section----------*/
 
 .header-container{
-    align-items: center;
+    display: flex
+    
 }
 
 .logo-img img{
@@ -10,7 +11,9 @@
     align-items: center;
 }
 
-.profile img{
+.profile-icon{
+    display: flex;
+    justify-content: space-evenly;
     float: right;
     height: 2.5rem;
 }
