--- a/profil.css
+++ b/profil.css
@@ -168,7 +168,7 @@ i{
 
 footer{
     padding: 0 15px;
-    background-color: #DDDDDD;
+    background-color: #D5E6E5;
     height: 80px;
     display: flex;
     justify-content: center;
