--- a/profil.css
+++ b/profil.css
@@ -132,18 +132,18 @@ i{
 
 
 .btn_indstillinger{
-    border-color: #1399FC;
+    border-color: #44B1AB;
     border-radius: 50px;
     border-width: 4px;
     padding: 7px 60px;
     transition-duration: 0.4s;
-    color: #1399FC;
+    color: #44B1AB;
     font-size: 20px;
     font-weight: 700;
 }
 
 .btn_indstillinger:hover{
-    background-color: #1399FC;
+    background-color: #44B1AB;
     color: white;
 }
 
@@ -161,7 +161,7 @@ i{
 }
 
 .fa-instagram:hover{
-    color: #1399FC;
+    color: #44B1AB;
     cursor: pointer;
 }
 
