--- a/profil.css
+++ b/profil.css
@@ -21,8 +21,12 @@ h3, h2{
     padding-left: 7px;
 }
 
+h2{
+    color: #9B3C7D;
+}
+
 .dato_tid{
-    color: #1399FC;
+    color: #9B3C7D;
     font-size: 16px;
 }
 
