--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@
     width: 80%;
     border: solid green;
     height: auto;
+    width: fit-content;
     overflow: auto;
     flex-direction: column;
     margin-left: auto;
@@ -140,4 +141,24 @@ footer{
 
 .socials-link a:hover i{
     color: aqua;
+}
+
+
+
+/* - - - - - - - - - - - - MEDIA QUERIES - - - - - - - - - - - - - -*/
+
+
+@media only screen and (min-width: 1230px){
+
+    .event-section {
+        flex-direction: row;       
+    }
+}
+
+@media only screen and (max-width: 1920px){
+
+    .event-section {
+        
+    }
+
 }
