--- a/style.css
+++ b/style.css
@@ -71,7 +71,8 @@
 
 .event-section {
     display: flex;
-    flex-wrap: nowrap;
+    max-width: 1200px;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     width: 80%;
@@ -148,7 +149,7 @@ footer{
 /* - - - - - - - - - - - - MEDIA QUERIES - - - - - - - - - - - - - -*/
 
 
-@media only screen and (min-width: 1230px){
+@media only screen and (min-width: 847px){
 
     .event-section {
         flex-direction: row;       
@@ -158,7 +159,7 @@ footer{
 @media only screen and (max-width: 1920px){
 
     .event-section {
-        
+
     }
 
 }
