--- a/profil.css
+++ b/profil.css
@@ -223,6 +223,7 @@ footer{
         display: flex;
         justify-content: space-around;
         padding: 0;
+        margin: 0;
     }
 
     h2{
