--- a/profil.css
+++ b/profil.css
@@ -144,7 +144,7 @@ i{
 
 
 
-.btn_indstillinger{
+.btn_settings{
     border-color: #44B1AB;
     border-radius: 50px;
     border-width: 4px;
@@ -155,12 +155,12 @@ i{
     font-weight: 700;
 }
 
-.btn_indstillinger:hover{
+.btn_settings:hover{
     background-color: #44B1AB;
     color: white;
 }
 
-.indstillinger{
+.settings{
     display: flex;
     justify-content: center;
     margin-bottom: 70px;
