--- a/profil.css
+++ b/profil.css
@@ -10,7 +10,7 @@ body{
 }
 
 p{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: proxima-nova, sans-serif;
     font-weight: bold;
     padding-left: 7px;
     font-size: 14px;
@@ -18,7 +18,7 @@ p{
 }
 
 h3, h2{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: proxima-nova, sans-serif;
     padding-left: 7px;
 }
 
