--- a/style.css
+++ b/style.css
@@ -1,7 +1,25 @@
-body {
+body{
     background-color: #E5F0EF;
+    margin: 0;
 }
 
+.site_wrapper{
+    width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+
+p{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    padding-left: 7px;
+    font-size: 14px;
+    color: #00454E;
+}
+
+i{
+    color: #00454E;
+}
 
 /*----------Header Section----------*/
 
