--- a/profil.css
+++ b/profil.css
@@ -123,7 +123,7 @@ i{
 }
 
 
-/* - - - - - - - - - - - -  - - - - - - - - - - - - - -*/
+/* - - - - - - - - - - - - Button - - - - - - - - - - - - - -*/
 
 
 
@@ -150,7 +150,7 @@ i{
     margin-top: 40px;
 }
 
-
+/* - - - - - - - - - - - - Footer section - - - - - - - - - - - - - -*/
 
 .fa-instagram{
     font-size: 1.8rem;
