--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ i{
     border-bottom-left-radius: 12px;
     border-bottom-right-radius: 12px;
     background-color: white;
+    box-shadow: 0 8px 16px 0 lightgrey, 0 6px 20px 0 lightgrey;
 }
         
     .div1 { grid-area: 1 / 1 / 2 / 3; }
@@ -112,6 +113,8 @@ i{
     flex-direction: row;
     margin-left: auto;
     margin-right: auto;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .events {
@@ -128,6 +131,7 @@ i{
     margin-right: auto;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
+    box-shadow: 0 8px 16px 0 lightgrey, 0 6px 20px 0 lightgrey;
 }
 
 
