--- a/profil.css
+++ b/profil.css
@@ -136,6 +136,7 @@ i{
     color: #44B1AB;
     font-size: 20px;
     font-weight: 700;
+    font-family: proxima-nova, sans-serif;
 }
 
 .btn_settings:hover{
