--- a/profil.css
+++ b/profil.css
@@ -156,6 +156,10 @@ i{
     margin-top: 40px;
 }
 
+.back_frontpage{
+    display: none;
+}
+
 /* - - - - - - - - - - - - Footer section - - - - - - - - - - - - - -*/
 
 .fa-instagram{
@@ -195,6 +199,10 @@ footer{
     .section_header{
         margin: 0 120px;
     }
+
+    .back_frontpage{
+        display: none;
+    }
 }
 
 @media only screen and (max-width: 847px){
@@ -223,6 +231,30 @@ footer{
 
     h2{
         padding: 0;
+    }
+
+    .back_frontpage{
+        display: flex;
+        justify-content: center;
+        margin-bottom: 70px;
+        margin-top: 40px;
+    }
+
+    .btn_back_frontpage{
+        border-color: #44B1AB;
+        border-radius: 50px;
+        border-width: 4px;
+        padding: 7px 60px;
+        transition-duration: 0.4s;
+        color: #44B1AB;
+        font-size: 20px;
+        font-weight: 700;
+        font-family: proxima-nova, sans-serif;
+    }
+    
+    .btn_back_frontpage:hover{
+        background-color: #44B1AB;
+        color: white;
     }
 
 }
