--- a/profil.css
+++ b/profil.css
@@ -257,4 +257,10 @@ footer{
         color: white;
     }
 
+    .btn_settings{
+        padding: 5px 30px;
+        font-size: 16px;
+        font-weight: 700;
+    }
+
 }
