--- a/profil.css
+++ b/profil.css
@@ -82,6 +82,7 @@ i{
     justify-content: center;
     background-color: white;
     margin: 0 280px;
+    width: 60%;
     border-radius: 80px 80px;
     box-shadow: 0 8px 16px 0 lightgrey, 0 6px 20px 0 lightgrey;
 }
