--- a/style.css
+++ b/style.css
@@ -144,7 +144,6 @@ h2{
     border-bottom-left-radius: 12px;
     border-bottom-right-radius: 12px;
     background-color: white;
-    box-shadow: 0 8px 16px 0 lightgrey, 0 6px 20px 0 lightgrey;
 }
         
     .div1 { grid-area: 1 / 1 / 2 / 3; }
@@ -198,7 +197,8 @@ h2{
 
 .events {
     margin: 10px;
-
+    border-radius: 12px;
+    box-shadow: 0 8px 16px 0 lightgrey, 0 6px 20px 0 lightgrey;
 }
 
 .events-img img {
@@ -210,7 +210,6 @@ h2{
     margin-right: auto;
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
-    box-shadow: 0 8px 16px 0 lightgrey, 0 6px 20px 0 lightgrey;
 }
 
 
