--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ i{
     border-radius: 20%;
     border-width: 3px;
     border-style: solid;
+    box-shadow: 0 4px 10px 0 lightgrey, 0 4px 10px 0 lightgrey;
 }
 
 .create-icon:hover{
@@ -99,8 +100,11 @@ i{
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    height: 54px;
     background-color: white;
     margin: 0 15px 30px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px 0 lightgrey, 0 4px 10px 0 lightgrey;
 }
 
 .search-category p{
@@ -114,6 +118,8 @@ i{
 
 .campus, .dato, .category{
     display: flex;
+    flex-direction: row;
+    justify-content: center;
     width: 100%;
 }
 .search-category i:hover{
@@ -130,6 +136,7 @@ i{
     padding: 17px;
     background-color: white;
     border-radius: 20%;
+    box-shadow: 0 4px 10px 0 lightgrey, 0 4px 10px 0 lightgrey;
 }
 
 .search-icon i:hover{
