--- a/profil.css
+++ b/profil.css
@@ -80,7 +80,6 @@ i{
 }
 
 
-
 .section_header{
     display: flex;
     align-items: center;
@@ -94,7 +93,7 @@ i{
 
 /* - - - - - - - - - - - - EVENT CARDS - - - - - - - - - - - - - -*/
 
-.event_card{
+/* .event_card{
     display: flex;
     flex-direction: column;
     width: fit-content;
@@ -125,6 +124,110 @@ i{
     width: 340px; 
     border-top-left-radius: 12px;
     border-top-right-radius: 12px;
+} */
+
+/* - - - - - - - - - - - - EVENT CARDS Section - - - - - - - - - - - - - -*/
+.parent {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    width: 350px;
+    height: 120px;
+    margin: auto;
+    text-align: left;
+    align-items: center;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+    background-color: white;
+}
+        
+    .div1 { grid-area: 1 / 1 / 2 / 3; }
+    .div2 { grid-area: 2 / 1 / 3 / 2; }
+    .div3 { grid-area: 2 / 2 / 3 / 3; }
+    .div4 { grid-area: 3 / 1 / 4 / 3; }
+
+.p2 {
+    font-size: 25px;
+    color: #00454E;
+    font-family: proxima-nova, sans-serif;
+    font-weight: bold;
+    margin-left: 12px;
+    margin-top: 12px;
+}
+
+.p3-purple {
+    font-size: 15px;
+    color: #9B3C7D;
+    font-family: proxima-nova, sans-serif;
+    font-weight: bold;
+    margin-left: 12px;
+    margin-top: 0px;
+}
+
+.p3 {
+    font-size: 13px;
+    color: #00454E;
+    font-family: proxima-nova, sans-serif;
+    font-weight: bold;
+    margin-left: 12px;  
+    margin-bottom: 25px;
+}
+
+.event-section {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    height: auto;
+    width: fit-content;
+    overflow: auto;
+    flex-direction: row;
+    padding: 20px;
+    padding-left: 45px;
+}
+
+.events {
+    margin: 10px;
+    border-radius: 12px;
+    box-shadow: 0 8px 16px 0 lightgrey, 0 6px 20px 0 lightgrey;
+    position: relative;
+}
+
+.events-img img {
+    width: 350px;
+    height: 200px;
+    object-fit: cover;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+}
+
+.people-count {
+    width: 50px;
+    height: 50px;
+    background-color: white;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 290px;
+    margin-top: 10px;
+    border-radius: 12px;
+}
+
+.fa-user {
+    font-size: 16px;
+}
+
+.p4 {
+    font-size: 13px;
+    color: #00454E;
+    font-family: proxima-nova, sans-serif;
+    font-weight: bold;
 }
 
 
