--- a/style.css
+++ b/style.css
@@ -320,6 +320,11 @@ footer{
         width: 800px;
     }
 
+    .section_header{
+        margin: 0 160px;
+        font-size: 14px;
+    }
+
     .footer-content img{
         height: 1.2rem;
         margin-left: -8rem;
@@ -335,6 +340,15 @@ footer{
     .site_wrapper{
         width: auto;
         margin: auto;
+    }
+
+    .section_header{
+        background-color: inherit;
+        box-shadow: none;
+        display: flex;
+        justify-content: space-around;
+        padding: 0;
+        margin: 0;
     }
 
     .event-section {
