--- a/profil.css
+++ b/profil.css
@@ -184,7 +184,7 @@ i{
     overflow: auto;
     flex-direction: row;
     padding: 20px;
-    padding-left: 45px;
+    /* padding-left: 45px; */
 }
 
 .events {
@@ -325,6 +325,7 @@ footer{
     .footer-content a{
         margin-left: -9rem;
     }
+
 }
 
 @media only screen and (max-width: 847px){
@@ -383,6 +384,11 @@ footer{
         padding: 5px 30px;
         font-size: 16px;
         font-weight: 700;
+    }
+
+    .event-section {
+        justify-content: center;
+        flex-direction: column;
     }
 
     .footer-content img{
