--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ h2{
 }
 
 /* - - - - - - - - - - Event Section - - - - - - - - - - */
-.parent {
+.text-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
@@ -278,6 +278,22 @@ h2{
 }
 
 /* - - - - - - - - - - Event Popup Section - - - - - - - - - - */
+.popup-grid {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    }
+    
+    .div1 { grid-area: 1 / 1 / 2 / 7; }
+    .div2 { grid-area: 2 / 1 / 3 / 7; }
+    .div3 { grid-area: 3 / 1 / 4 / 3; }
+    .div4 { grid-area: 3 / 3 / 4 / 5; }
+    .div5 { grid-area: 3 / 5 / 5 / 7; }
+    .div6 { grid-area: 4 / 1 / 5 / 5; }
+    .div7 { grid-area: 5 / 1 / 6 / 7; }
+
 .popup-events {
     position: fixed;
     top: 200%;
