--- a/style.css
+++ b/style.css
@@ -393,6 +393,11 @@ footer{
         font-size: 14px;
     }
 
+    .event-section{
+        padding-left: 0;
+        margin-left: 30px;
+    }
+
     .footer-content img{
         height: 1.2rem;
         margin-left: -8rem;
@@ -421,6 +426,7 @@ footer{
 
     .event-section {
         flex-direction: column;
+        padding-left: 45px;
     }
 
     .footer-content img{
