--- a/profil.css
+++ b/profil.css
@@ -184,7 +184,7 @@ i{
     overflow: auto;
     flex-direction: row;
     padding: 20px;
-    /* padding-left: 45px; */
+    padding-left: 45px;
 }
 
 .events {
@@ -386,7 +386,6 @@ footer{
     }
 
     .event-section {
-        justify-content: center;
         flex-direction: row;
         justify-content: space-around;
     }
