--- a/profil.css
+++ b/profil.css
@@ -184,7 +184,7 @@ i{
     overflow: auto;
     flex-direction: row;
     padding: 20px;
-    padding-left: 45px;
+    margin-left: 45px;
 }
 
 .events {
@@ -314,6 +314,11 @@ footer{
 
     .back_frontpage{
         display: none;
+    }
+
+    .event-section {
+        padding-left: 0;
+        margin-left: 30px;
     }
 
     .footer-content img{
