--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ h2{
 }
 
 /* - - - - - - - - - - Event Section - - - - - - - - - - */
-.text-grid {
+.parent {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
