--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ h2{
 }
 
 /* - - - - - - - - - - Event Section - - - - - - - - - - */
-.parent {
+.event-text-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
@@ -189,10 +189,10 @@ h2{
     background-color: white;
 }
         
-    .div1 { grid-area: 1 / 1 / 2 / 3; }
-    .div2 { grid-area: 2 / 1 / 3 / 2; }
-    .div3 { grid-area: 2 / 2 / 3 / 3; }
-    .div4 { grid-area: 3 / 1 / 4 / 3; }
+    .div-grid1 { grid-area: 1 / 1 / 2 / 3; }
+    .div-grid2 { grid-area: 2 / 1 / 3 / 2; }
+    .div-grid3 { grid-area: 2 / 2 / 3 / 3; }
+    .div-grid4 { grid-area: 3 / 1 / 4 / 3; }
 
 .p2 {
     font-size: 25px;
