--- a/style.css
+++ b/style.css
@@ -279,21 +279,27 @@ h2{
 }
 
 /* - - - - - - - - - - Event Popup Section - - - - - - - - - - */
-.popup-grid {
+
+.popup-grid { 
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(5, 1fr);
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(1, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
+    margin: auto;
+    text-align: left;
     }
-    
-    .div1 { grid-area: 1 / 1 / 2 / 7; }
-    .div2 { grid-area: 2 / 1 / 3 / 7; }
-    .div3 { grid-area: 3 / 1 / 4 / 3; }
-    .div4 { grid-area: 3 / 3 / 4 / 5; }
-    .div5 { grid-area: 3 / 5 / 5 / 7; }
-    .div6 { grid-area: 4 / 1 / 5 / 5; }
-    .div7 { grid-area: 5 / 1 / 6 / 7; }
+
+    .popup-img { grid-area: 1 / 1 / 7 / 5; } 
+    .popup-title { grid-area: 1 / 4 / 2 / 11; } 
+    .popup-category { grid-area: 2 / 4 / 3 / 11; } 
+    .popup-date { grid-area: 3 / 4 / 4 / 7; } 
+    .popup-time { grid-area: 3 / 7 / 4 / 9; } 
+    .popup-adress { grid-area: 4 / 4 / 5 / 9; } 
+    .popup-campus { grid-area: 5 / 4 / 6 / 9; } 
+    .popup-user { grid-area: 6 / 4 / 7 / 9; } 
+    .popup-people { grid-area: 3 / 9 / 7 / 11; } 
+    .popup-desc { grid-area: 7 / 1 / 11 / 11; } 
 
 .popup-events {
     position: fixed;
@@ -311,6 +317,14 @@ h2{
 
 .popup-events > * {
     margin: 15px 0px;
+}
+
+.popup-text-purple {
+    color: #9B3C7D;
+}
+
+.popup-title {
+    font-size: 30pt;
 }
 
 .popup-events .event-close-btn {
@@ -332,8 +346,8 @@ h2{
     color: #44B1AB;
 }
 .popup-img {
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 250px;
     object-fit: cover;
     border-radius: 15px;
     margin-left: 5px;
@@ -343,6 +357,16 @@ h2{
 .popup-desc {
     font-weight: normal;
 }
+
+.deltag-btn {
+    background-color: #F6F9F8;
+    border-color: #44B1AB;
+    color: #44B1AB;
+    border-radius: 30px;
+    padding: 1px 150px;
+    border-style: solid;
+}
+
 
 /* - - - - - - - - - - Footer Section - - - - - - - - - - */
 .footer-content{
