--- a/profil.css
+++ b/profil.css
@@ -297,6 +297,104 @@ footer{
     background-color: #D5E6E5;
 }
 
+#popup_bg{
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.7);
+    width: 100%;
+    height: 100%;
+    color: #00454E;
+    font-family: Arial, Helvetica, sans-serif;
+    display: none;
+}
+
+#popup_main_div{
+    position: fixed;
+    width: 600px;
+    height: 700px;
+    border: 2px solid black;
+    border-radius: 5px;
+    background-color: white;
+    left: 50%;
+    top: 50%;
+    transform:translate(-50%, -50%);
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.settings_content{
+    display: flex;
+    padding: 0;
+}
+
+.h2_settings{
+    text-align: center;
+}
+
+.insert_profilepic{
+    margin: 50px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.insert_profilepic >p{
+    padding: 0;
+    margin: 0;
+    font-size: 20px;
+}
+
+.fa-plus{
+    padding: 35px 35px;
+    margin-top: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    color: #9B3C7D;
+    border-color: #9B3C7D;
+    border-radius: 20%;
+    border-width: 3px;
+    border-style: solid;
+    box-shadow: 0 4px 10px 0 lightgrey, 0 4px 10px 0 lightgrey;
+    box-sizing: border-box;
+    width: fit-content;
+}
+
+.number_settings{
+    margin: 50px;
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+}
+
+.input_styling{
+    border-width: 2px;
+    border-style: solid;
+    border-color: #00454E;
+    border-radius: 6px;
+}
+
+.campus_settings{
+    margin: 50px;
+}
+
+.notifications_settings{
+    margin: 50px;
+}
+
+
+#close_popup_div{
+    display: flex;
+    justify-content: center;
+}
+
+.settings_close{
+    padding: 7px 60px;
+    cursor: pointer;
+    border-radius: 50px;
+    background-color: white;
+}
+
 /* - - - - - - - - - - - - MEDIA QUERIES - - - - - - - - - - - - - -*/
 /*
     Main CSS is for PC layout
@@ -399,6 +497,14 @@ footer{
 
     .footer-content img{
         margin-left: -9rem;
+    }
+
+    #popup_main_div{
+        left: auto;
+        right: auto;
+        margin: auto;
+        width: 97%;
+        top: 50px;
     }
 
 }
