--- a/profil.css
+++ b/profil.css
@@ -340,6 +340,7 @@ footer{
     border-style: solid;
     border-color: #00454E;
     border-radius: 6px;
+    padding: 3px 10px;
 }
 
 .campus_settings{
