--- a/style.css
+++ b/style.css
@@ -23,6 +23,14 @@ i{
     color: #00454E;
 }
 
+.p-filter{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    padding-left: 7px;
+    font-size: 14px;
+    color: #00454E;
+}
+
 /* - - - - - - - - - - Header Section - - - - - - - - - - */
 
 .logo_icon{
@@ -120,8 +128,96 @@ i{
     color: #44b1ab;
     font-size: 105%;
 }
+/* -------Test------- */
+.dropdown {
+    min-width: 7em;
+    position: relative;
+    margin: 2em;
+} 
 
-.campus, .dato, .category{
+.dropdown * {
+    box-sizing: border-box;
+}
+
+.select {
+    background: rgb(255, 255, 255);
+    color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* border: 2px #00454E solid; */
+    border-radius: 0.5em;
+    padding: 1em;
+    cursor: pointer;
+    /* transition: background 0.3s; */
+}
+
+.select-clicked {
+    border: 2px #26489a solid;
+    box-shadow: 0 0 0.8em #26489a;
+}
+
+.select:hover {
+    background: #e1e1e1;
+}
+
+.caret {
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 6px solid #00454E;
+    transition: 0.3s;
+}
+
+.caret-rotate {
+    transform: rotate(180deg);
+}
+
+.menu {
+    list-style: none;
+    padding: 0.2em 0.5em;
+    background: rgb(255, 255, 255);
+    border: 1px #e1e1e1 solid;
+    box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.2);
+    border-radius: 0.5em;
+    color: #9fa5b5;
+    position: absolute;
+    top: 3em;
+    left: 50%;
+    width: 100%;
+    transform: translateX(-50%);
+    opacity: 0;
+    display: none;
+    transition: 0.2s;
+    z-index: 1;
+}
+
+ .menu li {
+    padding: 0.7em 0.5em;
+    margin: 0.3em 0;
+    border-radius: 0.5em;
+    cursor: pointer;
+    border: none;
+    
+ }
+
+ .menu li:hover {
+    background: #f1f1f1;
+ }
+
+ .active {
+    background: #d2d2d2;
+ }
+
+
+ .menu-open {
+    display: block;
+    opacity: 1;
+ }
+
+/* ------Test Slut------- */
+.campus, .dato, .category,{
     display: flex;
     flex-direction: row;
     justify-content: center;
