--- a/style.css
+++ b/style.css
@@ -400,6 +400,10 @@ h2{
     cursor: pointer;
 }
 
+.events:hover {
+    transform: scale(105%);
+}
+
 .events-img img {
     width: 350px;
     height: 200px;
