--- a/profil.css
+++ b/profil.css
@@ -72,6 +72,10 @@ i{
     font-size: 22px;
 }
 
+.fa-house:hover{
+    color: #44B1AB;
+}
+
 .upcoming_img> img{
     width: 100%;
     height: 100%;
@@ -188,6 +192,7 @@ i{
 
 .fa-user {
     font-size: 16px;
+    color: #44B1AB;
 }
 
 .p4 {
