--- a/style.css
+++ b/style.css
@@ -217,13 +217,8 @@ i{
  }
 
 
-/* ------Test Slut------- */
-/* .campus, .dato, .category,{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-} */
+/* ------Dropdown Slut------- */
+
 
 
 
